[package]
name = "octosql-rs"
version = "0.1.0"
authors = ["jakub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { path = "../arrow/rust/arrow", version = "0.18.0-SNAPSHOT" }
sled = "0.31.0"
serde = "1.0.110"
serde_json = "1.0.53"
