[package]
name = "octosql"
version = "0.0.1"
authors = ["jakub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "1.0.0"
datafusion = "1.0.0"
serde = "1.0.110"
serde_json = "1.0.53"
nom = "5.1.2"
sqlparser = "0.6.1"
prettytable-rs = "0.8.0"
